# war-is-here

./: .editorconfig  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  inject.sh  rustfmt.toml
crates/aether/: Cargo.toml  build.rs
crates/aether/src/: control.rs  hooks.rs  lib.rs  macros.rs  splash.rs
crates/aether/src/commands/: console.rs  dump_hstrings.rs  editor_mode.rs  fps.rs  infinite_jump.rs  load_map_menu.rs  load_package.rs  log_events.rs  mod.rs  move_player.rs  pickup_item.rs  show_bird_kills.rs  show_collision.rs  show_player_pos.rs  show_triggers.rs  spawn_humans.rs  spawn_objct.rs  spawn_static_object.rs  teleport.rs
crates/aether/src/commands/console/: keyboard.rs  mod.rs  mouse.rs
crates/aether/src/commands/show_triggers/: mod.rs  shape.rs  via_immediate.rs  via_world_objects.rs  walk.rs
crates/aether/src/commands/show_triggers/via_immediate/: collect.rs  draw.rs  mod.rs
crates/aether/src/console/: draw.rs  keyboard.rs  mod.rs  mouse.rs
crates/aether/src/console/imgui_ext/: input_text_with_callback.rs  mod.rs
crates/aether/src/darksiders1/: gfc.rs  keen.rs  mod.rs
crates/aether/src/darksiders1/code/: mod.rs
crates/aether/src/darksiders1/code/vigil/: mod.rs
crates/aether/src/darksiders1/code/vigil/darksiders/: mod.rs
crates/aether/src/darksiders1/code/vigil/darksiders/world/: detectorobject.rs  loadregion.rs  mod.rs
crates/aether/src/darksiders1/code/vigil/drivers/keengraphics/: kggraphics.rs  kgmeshcache.rs
crates/aether/src/darksiders1/code/vigil/gfc/: mod.rs
crates/aether/src/darksiders1/code/vigil/gfc/base/: autoref.rs  object.rs  reflection.rs
crates/aether/src/darksiders1/code/vigil/gfc/game/: mod.rs  obliviongame.rs
crates/aether/src/darksiders1/code/vigil/gfc/graphics/: graphics.rs  material.rs  mesh.rs  meshbuilder.rs  skeleton3d.rs  uirenderer.rs
crates/aether/src/darksiders1/code/vigil/libmodules/: mod.rs
crates/aether/src/ui/: draw.rs  fonts.rs  keyboard.rs  mod.rs  mouse.rs
crates/aether/src/ui/shaders/: simple.hlsl
crates/aether/src/utils/: arrayvec.rs  color.rs  color_schemes.rs  coordinate_transformer.rs  coordinates.rs  cstr.rs  debug_draw.rs  debug_draw_3d.rs  fps_counter.rs  geometry.rs  interpolate.rs  liang_barsky.rs  marker.rs  mem.rs  meshes.rs  misc.rs  mod.rs  na_ext.rs  pretty.rs
crates/aether/src/utils/imgui_ext/: fontid.rs  imfontconfig.rs  input_text_with_callback.rs  mod.rs  string.rs
crates/horseman/: Cargo.toml
crates/horseman/src/: errors.rs  inject.rs  main.rs  utf16.rs  win32.rs
crates/marionette/: Cargo.toml  build.rs
crates/marionette/src/: control.rs  hooks.rs  lib.rs  macros.rs
crates/marionette/src/commands/: mod.rs  move_player.rs  pickup_item.rs  pretend_editor.rs  show_collision.rs  show_triggers.rs  spawn_actor.rs  spawn_cube.rs  spawn_humans.rs  spawn_objct.rs  spawn_static_object.rs  teleport.rs
crates/marionette/src/darksiders1/: gfc.rs  mod.rs
crates/marionette/src/darksiders1/code/: mod.rs
crates/marionette/src/darksiders1/code/vigil/: mod.rs
crates/marionette/src/darksiders1/code/vigil/drivers/: mod.rs
crates/marionette/src/darksiders1/code/vigil/gfc/: mod.rs
crates/marionette/src/utils/: coordinate_transformer.rs  debug_draw.rs  debug_draw_3d.rs  detour.rs  exfil.rs  ffi.rs  geometry.rs  liang_barsky.rs  mod.rs  pretty.rs
dev/: inject.sh
docs/: war.txt
(+200 files in other folders)
