[package]
name = "aether"
version = "0.0.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[features]
strict = []

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.7.1"
itertools = "0.9.0"
lru = "0.4.3"
num_enum = "0.5.1"
once_cell = "1.2.0"
ordered-float = "2.0.0"
parking_lot = { version = "0.9.0", features = ["nightly"] }
rand = "0.7.2"
scopeguard = "1.1.0"

gfx = "0.18.2"
gfx_device_dx11 = "0.8.2"
imgui = "0.5.0"
imgui-gfx-renderer = { version = "0.5.0", default-features = false, features = ["directx"] }

na = { package = "nalgebra", version = "0.19.0" }
ncollide3d = "0.21.0"

darksiders1-sys = { path = "../darksiders1-sys" }
d3d11 = { path = "../d3d11" }
pdbindgen-runtime = { path = "../../../pdbindgen/crates/pdbindgen-runtime" }

[dependencies.winapi]
version = "0.3.8"
features = [
    "consoleapi",
    "libloaderapi",
    "minwindef",
]

[build-dependencies]
glob = "0.3.0"
grep = "0.2.4"
indexmap = "1.2.0"
