[package]
name = "horseman"
version = "0.0.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[features]
strict = []

[dependencies]
scopeguard = "1.1.0"

[dependencies.winapi]
version = "0.3.8"
features = [
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "minwindef",
    "processthreadsapi",
    "synchapi",
    "tlhelp32",
    "winbase",
]
