[package]
name = "marionette"
version = "0.0.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[features]
strict = []

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.7.1"
num_enum = "0.4.2"
once_cell = "1.2.0"
ordered-float = "1.0.2"
parking_lot = { version = "0.9.0", features = ["nightly"] }

na = { package = "nalgebra", version = "0.19.0" }
ncollide3d = "0.21.0"

darksiders1-sys = { path = "../darksiders1-sys" }
pdbindgen-runtime = { path = "../../../pdbindgen/crates/pdbindgen-runtime" }

[dependencies.winapi]
version = "0.3.8"
features = [
    "consoleapi",
    "libloaderapi",
    "minwindef",
]

[build-dependencies]
glob = "0.3.0"
grep = "0.2.4"
indexmap = "1.2.0"
